line spacing and laning phase styling fix

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body,
 .LanePhaseSummaryDetailsActive p {
     font-size: 16px;
     width: 97%;
+    line-height: 1.6;
 }
 
 .lanePhaseSummarySwords {
@@ -919,6 +920,7 @@ body,
     flex-direction: column;
     margin-left: 0px;
     margin-top: 10px;
+    line-height: 1.6;
 }
 
 .StandoutImagesContainer {
@@ -968,29 +970,33 @@ body,
     width: 65% !important;
 }
 
+.LaningPhaseGridHeader {
+    display: flex;
+    align-items: center;
+    position: relative;
+    min-height: 50px;
+    width: 100%;
+}
+
 .LaneOutcomeTitle {
     margin-right: 35px !important;
-    max-width: 15%;
+    /* max-width: 15%; */
+    width: 20%;
 }
 
 .LaneBubbleContainer {
     flex-direction: row;
     display: inline-flex;
     margin-right: 50px;
-}
-
-.LaningPhaseGridHeader {
-    display: flex;
-    align-items: center;
-    position: relative;
-    min-height: 50px;
+    width: 24%;
 }
 
 .LaneButtonsContainer {
-    max-width: 90vw;
+    /* max-width: 90vw; */
     position: absolute;
     left: auto;
     right: 10px;
+    width: 43%;
 }
 
 .GraphSectionDivContainer {
@@ -1319,6 +1325,7 @@ li {
         position: unset;
         left: auto;
         right: 10px;
+        width: unset;
     }
 
     .scrollTop {
@@ -1494,6 +1501,7 @@ li {
         margin-right: 0px;
         margin-top: 10px;
         margin-bottom: 10px;
+        width: unset;
     }
 
     .LanePhaseSummaryCardActive {
@@ -1508,6 +1516,7 @@ li {
         margin-top: 10px !important;
         margin-right: 0px !important;
         max-width: none;
+        width: unset;
     }
 
     .LanePhaseSummaryDetailsActive {
